Timesheet/main/default/objects/Timesheet_Default_Value__mdt/Timesheet_Default_Value__mdt.object-meta.xml
<CustomObject>
    <label>Timesheet Default Value</label>
    <pluralLabel>Timesheet Default Values</pluralLabel>
</CustomObject>