Timesheet/main/default/objects/Timesheet_Default_Value__mdt/fields/Accrued_Vacation_Days__c.field-meta.xml
<CustomField>
    <fullName>Accrued_Vacation_Days__c</fullName>
    <label>Accrued Vacation Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>