Timesheet/main/default/objects/Timesheet_Default_Value__mdt/fields/Allow_Partial_Submit__c.field-meta.xml
<CustomField>
    <fullName>Allow_Partial_Submit__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Allow Partial Submit</label>
    <type>Checkbox</type>
</CustomField>