Timesheet/main/default/objects/Timesheet_Default_Value__mdt/fields/Maximum_Working_Hrs_Per_Day__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Working_Hrs_Per_Day__c</fullName>
    <label>Maximum Working Hrs Per Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>