Timesheet/main/default/objects/Timesheet_Default_Value__mdt/fields/Working_Days_per_Week__c.field-meta.xml
<CustomField>
    <fullName>Working_Days_per_Week__c</fullName>
    <label>Working Days per Week</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>