Timesheet/main/default/objects/Timesheet_Default_Value__mdt/fields/Working_Hours_Per_Day__c.field-meta.xml
<CustomField>
    <fullName>Working_Hours_Per_Day__c</fullName>
    <label>Working Hours Per Day</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>